// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > :props > :addable 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
      style="min-height: 48px;"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <div
          class="t-tabs__add-btn t-tabs__btn t-size-m"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="add"
            >
              <path
                d="M12 5L12 19M19 12L5 12"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top t-is-addable"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :defaultValue 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :disabled 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :placement 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-left"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-left"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth t-is-vertical"
          >
            <div
              class="t-tabs__bar t-is-left"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :size 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :theme 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-tabs__nav--card t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <!---->
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :value 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          css="true"
          mode="out-in"
          name="fade"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;
